# songlist-shuffler

./: Cargo.toml  README.md
src/: lis.csv  list.csv
src/lib/: mod.rs  song.rs  song_list.rs  utils.rs
