[package]
name = "songlist-shuffler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "songlist_shuffler"
path = "src/lib/mod.rs"

[dependencies]
csv = "1.3"
rand = "0.8.5"
tabled = "0.14.0"
tempfile = "3.8.1"
